--- a/index.html
+++ b/index.html
@@ -10,21 +10,7 @@
   <div id="elm"></div>
   <script>
   var app = Elm.Main.init({
-    node: document.getElementById('elm'),
-    flags: {
-      warehouses: [
-        {
-          "id": "3E431DDF",
-          "name": "Warehouse one",
-          "location": "Leeds",
-          "lat": 53.77,
-          "lon": -1.55,
-          "rating": 0,
-          "temperature": "chilled",
-          "capacity_sq_ft": 32073
-        }
-      ]
-    }
+    node: document.getElementById('elm')
   });
   </script>
 </body>
